# BibTex-Miniprojekti

./: .coveragerc  .gitignore  .pylintrc  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  retro.md  run_robot_tests.sh  run_tests.sh
.github/workflows/: ci.yaml
misc/: ohjeita.md
src/: app.py  config.py  db_helper.py  schema.sql  util.py
src/entities/: reference.py  tag.py  todo.py
src/repositories/: reference_repository.py  tag_repository.py  todo_repository.py
src/static/: style.css
src/story_tests/: bibtex_dl.robot  bibtex_download.robot  dl_resource.robot  references.robot  resource.robot  todos.robot
src/story_tests/files/: test_references.bib
src/story_tests/resources/: dl_resource.robot  resource.robot
src/story_tests/suites/: add_comment.robot  add_from_doi.robot  basic_reference.robot  bibtex_dl.robot  creating_reference.robot  deleting_reference.robot  deleting_selected_references.robot  editing_reference.robot  filtering_references.robot  reference_types.robot  sorting_references.robot  tag_filter.robot  tag_update_delete.robot  tags.robot  upload_bibtex.robot  word_filter.robot
src/templates/: confirm_delete_selected.html  delete_reference.html  edit_reference.html  index.html  layout.html  new_reference.html  new_todo.html  tag_management.html
src/templates/scripts/: front_page_script.html  reference_form_script.html
src/tests/: bibtex_string_generation_test.py  reference_from_string_test.py  reference_type_test.py  validate_todo_test.py
